syntax = "proto3";

package com.github.ptracker.entity;

option java_package = "com.github.ptracker.entity";
option java_multiple_files = true;
option java_outer_classname = "FertilizationEventProto";

import "com/github/ptracker/common/EventMetadata.proto";

message FertilizationEvent {

  string id = 1;

  int32 quantityMg = 2;

  com.github.ptracker.common.EventMetadata metadata = 3;

  string gardenPlantId = 4;
}
